# discrete_interpreter

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  config_test.sh  debug_project.py  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: EVALUATE_RULE_ALGORITHM.md  JOIN_ALGORITHM copy.md  JOIN_ALGORITHM.md  OPT_RULES_EVAL_OVERVIEW.md  OPT_RULES_INTERP.md  RULES_INTERP.md
src/project/: datalogprogram.py  fsm.py  interpreter.py  lexer.py  parser.py  project.py  relation.py  reporter.py  token.py
tests/: test_dependency_graph.py  test_interpreter.py  test_join.py  test_passoff.py  test_relation.py  test_reporter.py
tests/resources/project-passoff/100/: answer1.txt  answer2.txt  answer3.txt  answer5.txt  answer6.txt  answer7.txt  answer8.txt  input1.txt  input2.txt  input3.txt  input5.txt  input6.txt  input7.txt  input8.txt
tests/resources/project-passoff/80/: answer0.txt  answer1.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  input3.txt  input5.txt  input7.txt
